# eruption

eruption/: Cargo.toml
eruption-debug-tool/: Cargo.toml
eruption-debug-tool/src/: main.rs  util.rs
eruption-netfx/: Cargo.toml
eruption-netfx/src/: main.rs
eruption-process-monitor/: Cargo.toml
eruption-process-monitor/src/: constants.rs  dbus_client.rs  main.rs  manifest.rs  process.rs  transport.rs  util.rs
eruption-process-monitor/src/sensors/: process.rs
eruption-process-monitor/src/visualizers/: mod.rs  percentage.rs  solid_color.rs
eruption/src/: main.rs
eruption/src/plugins/: sensors.rs
eruptionctl/: Cargo.toml
eruptionctl/src/: main.rs
support/config/: process-monitor-dev.conf  process-monitor.conf
support/man/: eruption-process-monitor.1  process-monitor.conf.5
support/pkg/arch/: PKGBUILD
support/pkg/debian/: install
support/pkg/fedora/: eruption-roccat-vulcan.spec
support/process-monitor/manifests/: calculator.yaml  left4dead2.yaml
support/profiles/: swirl-perlin-blue-red.profile
support/systemd/: eruption-process-monitor.service
