[package]
name = "eruption-process-monitor"
version = "0.0.1"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>"]
edition = "2018"
description = "A CLI utility to monitor and introspect system processes"
repository = "https://github.com/X3n0m0rph59/eruption-roccat-vulcan.git"
homepage = "https://github.com/X3n0m0rph59/eruption-roccat-vulcan"
license = "GPLv3+"
readme = "README.md"

[dependencies]
# async-std = { version = "1.6.2", features = ["attributes", "tokio02"] }
# async-macros = "2.0.0"
clap = "3.0.0-beta.1"
clap_derive = "3.0.0-beta.1"
ctrlc = { version = "3.1.6", features = ["termination"] }
config = "0.10.1"
colored = "2.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
libc = "0.2.79"
nix = "0.18.0"
parking_lot = { version = "0.11.0", features = ["deadlock_detection"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
serde_yaml = "0.8"
tokio = { version = "0.2.22", features = ["full", "parking_lot"] }
tracing = "0.1.21"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.12"
crossbeam = "0.7.3"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
toml = "0.5.6"
thiserror = "1.0.20"
eyre = "0.6.1"
color-eyre = "0.5.6"
paste = "1.0"
hotwatch = "0.4.3"
hexdump = "0.1.0"
itertools = "0.9.0"
rayon = "1.4.1"
lazy_static = "1.4.0"
rust-crypto = "0.2.36"
dbus = "0.8.4"
dbus-tokio = "0.5.2"
procmon-sys = { version = "0.0.2", path = "../eruption/src/procmon-sys" }

[dev-dependencies]
tokio = { version = "0.2", features = ["test-util"] }
